2010-06-01

	* src/summaryview.c: modified 'Go to next folder' dialog description.

2010-05-31

	* src/plugin.[ch]
	  src/main.c: added some functions for FolderView.

2010-05-28

	* src/update_check.c: support DISP_RELEASE / DISP_DEVEL which
	  set displayed new version.

2010-05-28

	* src/update_check.[ch]
	  src/plugin.[ch]
	  src/main.c: added functions to modify URLs for update check.

2010-05-27

	* src/prefs_common_dialog.c: prefs_colorlabel_create(): added
	  description for the color label settings.

2010-05-25

	* src/mainwindow.c: help_command_line_show(): added Windows-only
	  --ipcport option.

2010-05-24

	* src/compose.c: compose_attach_open(): fixed compilation on win32.

2010-05-24

	* src/inc.c: fixed crash when clicking tray icon menu
	  'Get from current account' with no account.

2010-05-24

	* src/main.c: added --instance-id <ID> option, which allows users to
	  run multiple instances of Sylpheed. There is no extra checks for
	  config directory, so use with caution.

2010-05-21

	* libsylph/filter.c: filter_apply(): fixed a bug that MIME flag was
	  not set to filtered messages. This occurred to filtered sent
	  messages.

2010-05-21

	* src/prefs_common_dialog.c
	  src/prefs_filter_edit.c
	  src/prefs_account_dialog.c
	  src/editldap.c: removed warnings 'GtkSpinButton: setting an
	  adjustment with non-zero page size is deprecated'.
	  The last value of gtk_adjustment_new() must be 0 for GtkSpinButton.

2010-05-21

	* libsylph/socket.c: sock_kill_process(): prevent redundant error
	  messages when waitpid() is interrupted by EINTR.

2010-05-20

	* src/compose.c: added "Open" menu in the attach context menu.
	  attach_button_pressed(): modify sensitivity of attach context menu.

2010-05-11

	* src/syldap.c: allow deprecated LDAP API calls (debian BTS #463366).
	  Possibly fixes crash on 64-bit architecture.

2010-05-11

	* src/setup.c: removed debug print.

2010-05-08

	* libsylph/mbox.c: proc_mbox_full(): fixed a bug that MIME flag was