@@ -1,3 +1,7 @@
+2010-06-02
+
+	* libsylph/filter.c: added debug log for filter.
+
 2010-06-01
 
 	* src/summaryview.c: modified 'Go to next folder' dialog description.
